--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -1527,6 +1527,66 @@
 			status = "disabled";
 		};
 
+		imrlx4_ims0: ims@fe860000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe860000 0 0x10000>;
+			interrupts = <GIC_SPI 150 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 529>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 529>;
+		};
+
+		imrlx4_ims1: ims@fe870000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe870000 0 0x10000>;
+			interrupts = <GIC_SPI 151 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 530>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 530>;
+		};
+
+		imrlx4_imr0: imr@fe880000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe880000 0 0x10000>;
+			interrupts = <GIC_SPI 146 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 525>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 525>;
+		};
+
+		imrlx4_imr1: imr@fe890000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe890000 0 0x10000>;
+			interrupts = <GIC_SPI 147 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 526>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 526>;
+		};
+
+		imrlx4_imr2: imr@fe8a0000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe8a0000 0 0x10000>;
+			interrupts = <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 527>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 527>;
+		};
+
+		imrlx4_imr3: imr@fe8b0000 {
+			compatible = "renesas,r8a779a0-imr-lx4",
+				     "renesas,imr-lx4";
+			reg = <0 0xfe8b0000 0 0x10000>;
+			interrupts = <GIC_SPI 149 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&cpg CPG_MOD 528>;
+			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
+			resets = <&cpg 528>;
+		};
+
 		vspd0: vsp@fea20000 {
 			compatible = "renesas,vsp2";
 			reg = <0 0xfea20000 0 0x4000>;
