arm64: dts: renesas: r8a779a0: Switch IMR devices to use generic-uio
This allows to use generic-uio driver for IMR devices.

Signed-off-by: Khiem Nguyen <khiem.nguyen.xt@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -1528,8 +1528,7 @@
 		};
 
 		imrlx4_ims0: ims@fe860000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe860000 0 0x10000>;
 			interrupts = <GIC_SPI 150 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 529>;
@@ -1538,8 +1537,7 @@
 		};
 
 		imrlx4_ims1: ims@fe870000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe870000 0 0x10000>;
 			interrupts = <GIC_SPI 151 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 530>;
@@ -1548,8 +1546,7 @@
 		};
 
 		imrlx4_imr0: imr@fe880000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe880000 0 0x10000>;
 			interrupts = <GIC_SPI 146 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 525>;
@@ -1558,8 +1555,7 @@
 		};
 
 		imrlx4_imr1: imr@fe890000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe890000 0 0x10000>;
 			interrupts = <GIC_SPI 147 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 526>;
@@ -1568,8 +1564,7 @@
 		};
 
 		imrlx4_imr2: imr@fe8a0000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe8a0000 0 0x10000>;
 			interrupts = <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 527>;
@@ -1578,8 +1573,7 @@
 		};
 
 		imrlx4_imr3: imr@fe8b0000 {
-			compatible = "renesas,r8a779a0-imr-lx4",
-				     "renesas,imr-lx4";
+			compatible = "generic-uio";
 			reg = <0 0xfe8b0000 0 0x10000>;
 			interrupts = <GIC_SPI 149 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 528>;
