--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -2701,7 +2701,7 @@
 			clocks = <&cpg CPG_MOD 16>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 16>;
-			linux,uio-name = "cisp0";
+			linux,uio-name = "cisp_00";
 		};
 
 		tisp0: tisp@fed00000 {
@@ -2711,7 +2711,7 @@
 			clocks = <&cpg CPG_MOD 16>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 16>;
-			linux,uio-name = "tisp0";
+			linux,uio-name = "tisp_00";
 		};
 
 		cisp1: cisp@fee00000 {
@@ -2721,7 +2721,7 @@
 			clocks = <&cpg CPG_MOD 17>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 17>;
-			linux,uio-name = "cisp1";
+			linux,uio-name = "cisp_01";
 		};
 
 		tisp1: tisp@fed20000 {
@@ -2731,7 +2731,7 @@
 			clocks = <&cpg CPG_MOD 17>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 17>;
-			linux,uio-name = "tisp1";
+			linux,uio-name = "tisp_01";
 		};
 
 		cisp2: cisp@fef00000 {
@@ -2741,7 +2741,7 @@
 			clocks = <&cpg CPG_MOD 18>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 18>;
-			linux,uio-name = "cisp2";
+			linux,uio-name = "cisp_02";
 		};
 
 		tisp2: tisp@fed30000 {
@@ -2751,7 +2751,7 @@
 			clocks = <&cpg CPG_MOD 18>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 18>;
-			linux,uio-name = "tisp2";
+			linux,uio-name = "tisp_02";
 		};
 
 		cisp3: cisp@fe400000 {
@@ -2761,7 +2761,7 @@
 			clocks = <&cpg CPG_MOD 19>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 19>;
-			linux,uio-name = "cisp3";
+			linux,uio-name = "cisp_03";
 		};
 
 		tisp3: tisp@fed40000 {
@@ -2771,7 +2771,7 @@
 			clocks = <&cpg CPG_MOD 19>;
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 19>;
-			linux,uio-name = "tisp3";
+			linux,uio-name = "tisp_03";
 		};
 
 		impldma: dma-controller@f1f00000 {
