arm64: dts: renesas: Add resets property to IMP devices
Add the resets property to support software reset for IMP devices.

Signed-off-by: Khiem Nguyen <khiem.nguyen.xt@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -2780,6 +2780,7 @@
 			interrupts = <GIC_SPI 584 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&cpg CPG_MOD 117>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 117>;
 			linux,uio-name = "imp_ldma_00";
 		};
 
@@ -2791,6 +2792,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
 			interrupt-controller;
 			#interrupt-cells = <1>;
+			resets = <&cpg 118>;
 			linux,uio-name = "imp_ctrl_00";
 		};
 
@@ -2799,6 +2801,7 @@
 			reg = <0 0xffa00000 0 0x20000>;
 			clocks = <&cpg CPG_MOD 24>;
 			power-domains = <&sysc R8A779A0_PD_A2IMP01>;
+			resets = <&cpg 24>;
 			linux,uio-name = "imp_imp_00";
 		};
 
@@ -2807,6 +2810,7 @@
 			reg = <0 0xffa20000 0 0x20000>;
 			clocks = <&cpg CPG_MOD 25>;
 			power-domains = <&sysc R8A779A0_PD_A2IMP01>;
+			resets = <&cpg 25>;
 			linux,uio-name = "imp_imp_01";
 		};
 
@@ -2815,6 +2819,7 @@
 			reg = <0 0xffb00000 0 0x20000>;
 			clocks = <&cpg CPG_MOD 103>;
 			power-domains = <&sysc R8A779A0_PD_A2IMP23>;
+			resets = <&cpg 103>;
 			linux,uio-name = "imp_imp_02";
 		};
 
@@ -2823,6 +2828,7 @@
 			reg = <0 0xffb20000 0 0x20000>;
 			clocks = <&cpg CPG_MOD 104>;
 			power-domains = <&sysc R8A779A0_PD_A2IMP23>;
+			resets = <&cpg 104>;
 			linux,uio-name = "imp_imp_03";
 		};
 
@@ -2831,6 +2837,7 @@
 			reg = <0 0xffa40000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 28>;
 			power-domains = <&sysc R8A779A0_PD_A2CV0>;
+			resets = <&cpg 28>;
 			linux,uio-name = "imp_cve_00";
 		};
 
@@ -2839,6 +2846,7 @@
 			reg = <0 0xffa50000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 29>;
 			power-domains = <&sysc R8A779A0_PD_A2CV1>;
+			resets = <&cpg 29>;
 			linux,uio-name = "imp_cve_01";
 		};
 
@@ -2847,6 +2855,7 @@
 			reg = <0 0xffb40000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 30>;
 			power-domains = <&sysc R8A779A0_PD_A2CV2>;
+			resets = <&cpg 30>;
 			linux,uio-name = "imp_cve_02";
 		};
 
@@ -2855,6 +2864,7 @@
 			reg = <0 0xffb50000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 31>;
 			power-domains = <&sysc R8A779A0_PD_A2CV3>;
+			resets = <&cpg 31>;
 			linux,uio-name = "imp_cve_03";
 		};
 
@@ -2863,6 +2873,7 @@
 			reg = <0 0xffa60000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 100>;
 			power-domains = <&sysc R8A779A0_PD_A2CV4>;
+			resets = <&cpg 100>;
 			linux,uio-name = "imp_cve_04";
 		};
 
@@ -2871,6 +2882,7 @@
 			reg = <0 0xffb60000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 107>;
 			power-domains = <&sysc R8A779A0_PD_A2CV5>;
+			resets = <&cpg 107>;
 			linux,uio-name = "imp_cve_05";
 		};
 
@@ -2879,6 +2891,7 @@
 			reg = <0 0xffa70000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 313>;
 			power-domains = <&sysc R8A779A0_PD_A2CV6>;
+			resets = <&cpg 313>;
 			linux,uio-name = "imp_cve_06";
 		};
 
@@ -2887,6 +2900,7 @@
 			reg = <0 0xffb70000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 314>;
 			power-domains = <&sysc R8A779A0_PD_A2CV7>;
+			resets = <&cpg 314>;
 			linux,uio-name = "imp_cve_07";
 		};
 
@@ -2895,6 +2909,7 @@
 			reg = <0 0xffa80000 0 0x1000>;
 			clocks = <&cpg CPG_MOD 26>;
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
+			resets = <&cpg 26>;
 			linux,uio-name = "imp_dma_00_00";
 		};
 
@@ -2903,6 +2918,7 @@
 			reg = <0 0xffa81000 0 0x1000>;
 			clocks = <&cpg CPG_MOD 26>;
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
+			resets = <&cpg 26>;
 			linux,uio-name = "imp_dma_00_01";
 		};
 
@@ -2911,6 +2927,7 @@
 			reg = <0 0xffb80000 0 0x1000>;
 			clocks = <&cpg CPG_MOD 105>;
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
+			resets = <&cpg 105>;
 			linux,uio-name = "imp_dma_01_00";
 		};
 
@@ -2919,6 +2936,7 @@
 			reg = <0 0xffb81000 0 0x1000>;
 			clocks = <&cpg CPG_MOD 105>;
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
+			resets = <&cpg 105>;
 			linux,uio-name = "imp_dma_01_01";
 		};
 
@@ -2927,6 +2945,7 @@
 			reg = <0 0xffa84000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 27>;
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
+			resets = <&cpg 27>;
 			linux,uio-name = "imp_psc_00";
 		};
 
@@ -2935,6 +2954,7 @@
 			reg = <0 0xffb84000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 106>;
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
+			resets = <&cpg 106>;
 			linux,uio-name = "imp_psc_01";
 		};
 
@@ -2943,6 +2963,7 @@
 			reg = <0 0xffaa0000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 22>;
 			power-domains = <&sysc R8A779A0_PD_A1CNN0>;
+			resets = <&cpg 22>;
 			linux,uio-name = "imp_cnn_00";
 		};
 
@@ -2951,6 +2972,7 @@
 			reg = <0 0xffbc0000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 108>;
 			power-domains = <&sysc R8A779A0_PD_A1CNN1>;
+			resets = <&cpg 108>;
 			linux,uio-name = "imp_cnn_01";
 		};
 
@@ -2959,6 +2981,7 @@
 			reg = <0 0xffac0000 0 0x10000>;
 			clocks = <&cpg CPG_MOD 101>;
 			power-domains = <&sysc R8A779A0_PD_A1CNN2>;
+			resets = <&cpg 101>;
 			linux,uio-name = "imp_cnn_02";
 		};
 
@@ -2967,6 +2990,7 @@
 			reg = <0 0xed200000 0 0x100000>;
 			clocks = <&cpg CPG_MOD 120>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 120>;
 			linux,uio-name = "imp_spmi_00_00";
 		};
 
@@ -2975,6 +2999,7 @@
 			reg = <0 0xffa8c000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 120>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 120>;
 			linux,uio-name = "imp_spmi_00_01";
 		};
 
@@ -2983,6 +3008,7 @@
 			reg = <0 0xeda00000 0 0x100000>;
 			clocks = <&cpg CPG_MOD 121>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 121>;
 			linux,uio-name = "imp_spmi_01_00";
 		};
 
@@ -2991,6 +3017,7 @@
 			reg = <0 0xffb8c000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 121>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 121>;
 			linux,uio-name = "imp_spmi_01_01";
 		};
 
@@ -2999,6 +3026,7 @@
 			reg = <0 0xed600000 0 0x200000>;
 			clocks = <&cpg CPG_MOD 23>;
 			power-domains = <&sysc R8A779A0_PD_A2CN0>;
+			resets = <&cpg 23>;
 			linux,uio-name = "imp_spmc_00_00";
 		};
 
@@ -3007,6 +3035,7 @@
 			reg = <0 0xffab0000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 23>;
 			power-domains = <&sysc R8A779A0_PD_A2CN0>;
+			resets = <&cpg 23>;
 			linux,uio-name = "imp_spmc_00_01";
 		};
 
@@ -3015,6 +3044,7 @@
 			reg = <0 0xedc00000 0 0x200000>;
 			clocks = <&cpg CPG_MOD 109>;
 			power-domains = <&sysc R8A779A0_PD_A2CN1>;
+			resets = <&cpg 109>;
 			linux,uio-name = "imp_spmc_01_00";
 		};
 
@@ -3023,6 +3053,7 @@
 			reg = <0 0xffbd0000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 109>;
 			power-domains = <&sysc R8A779A0_PD_A2CN1>;
+			resets = <&cpg 109>;
 			linux,uio-name = "imp_spmc_01_01";
 		};
 
@@ -3031,6 +3062,7 @@
 			reg = <0 0xed400000 0 0x200000>;
 			clocks = <&cpg CPG_MOD 102>;
 			power-domains = <&sysc R8A779A0_PD_A2CN2>;
+			resets = <&cpg 102>;
 			linux,uio-name = "imp_spmc_02_00";
 		};
 
@@ -3039,6 +3071,7 @@
 			reg = <0 0xffad0000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 102>;
 			power-domains = <&sysc R8A779A0_PD_A2CN2>;
+			resets = <&cpg 102>;
 			linux,uio-name = "imp_spmc_02_01";
 		};
 
@@ -3047,6 +3080,7 @@
 			reg = <0 0xffa88000 0 0x4000>;
 			clocks = <&cpg CPG_MOD 116>;
 			power-domains = <&sysc R8A779A0_PD_A3IR>;
+			resets = <&cpg 116>;
 			linux,uio-name = "imp_dta_00";
 		};
 
