--- a/arch/arm64/boot/dts/renesas/r8a779a0-falcon.dts
+++ b/arch/arm64/boot/dts/renesas/r8a779a0-falcon.dts
@@ -87,6 +87,17 @@
 		regulator-boot-on;
 		regulator-always-on;
 	};
+
+	vcc_sdhi2: regulator-vcc-sdhi2 {
+		compatible = "regulator-fixed";
+
+		regulator-name = "SDHI2 Vcc";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+
+		gpio = <&gpio0 15 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
 };
 
 &extal_clk {
@@ -305,6 +316,12 @@
 	pcie3_pins: pcie3 {
 		groups = "pcie3_clkreq_n";
 		function = "pcie";
+	};
+
+	sdhi2_pins: sd2 {
+		groups = "mmc_data4", "mmc_ctrl", "mmc_cd";
+		function = "mmc";
+		power-source = <3300>;
 	};
 };
 
@@ -814,6 +831,18 @@
 
 &tmu4 {
 	status = "okay";
+};
+
+&sdhi2 {
+	pinctrl-0 = <&sdhi2_pins>;
+	pinctrl-names = "default";
+
+	vmmc-supply = <&vcc_sdhi2>;
+	vqmmc-supply = <&vcc_sdhi2>;
+
+	bus-width = <4>;
+	/* please only enable sdhi2 or mmc0 */
+	/* status = "okay"; */
 };
 
 &mmc0 {
